Name:               language-features
Version:            0.0.1
Synopsis:           Feature extraction utility functions
License:            BSD3
License-file:       LICENSE
Author:             Jakub Waszczuk
Maintainer:         waszczuk.kuba@gmail.com
Build-type:         Simple
Exposed-modules:    Data.Feature
		    Data.Schema
Build-Depends:      base
                  , containers
                  , text
                  , vector
		  , morphosyntax
